# knurl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CliOptions.cpp  CliOptions.h  Engine.cpp  Engine.h  main.cpp
graph/: CycleDetector.cpp  CycleDetector.h  DependencyGraph.cpp  DependencyGraph.h  EdgeTierClassifier.cpp  EdgeTierClassifier.h  GraphTierAnnotator.cpp  GraphTierAnnotator.h  ImpactAnalyzer.cpp  ImpactAnalyzer.h  ModuleResolver.cpp  ModuleResolver.h  RiskRanker.cpp  RiskRanker.h  UsageAnalyzer.cpp  UsageAnalyzer.h
render/: AsciiTreeRenderer.h  Asciitreerenderer.cpp  DotExporter.cpp  DotExporter.h
scanning/: FileWalker.cpp  FileWalker.h  LocalBindingExtractor.cpp  LocalBindingExtractor.h  PyImportExtractor.cpp  PyImportExtractor.h  UsageIndexer.cpp  UsageIndexer.h
testdata/: import_edge_cases.py
testdata/full_check_repo/: external_only.py  main.py  standalone.py  usage_demo.py
testdata/full_check_repo/cyclic3/: x.py  y.py  z.py
testdata/full_check_repo/pkg/: __init__.py  helper.py  utils.py
testdata/full_check_repo/pkg/sub/: __init__.py  deep.py
testdata/full_check_repo/tests/: conftest.py  test_core.py  test_more.py
testdata/resolver_repo/: main.py
testdata/resolver_repo/pkg/: __init__.py  sub_helper.py
testdata/resolver_repo/pkg/sub/: __init__.py  util.py
testdata/sample_repo/: main.py
testdata/sample_repo/pkg/: helper.py  utils.py
